# Coffeescale

./: .gitignore
coffeescale/backend/: .env.example  .gitignore  .importlinter  IMPLEMENTACION.md  Makefile  README.md  pyproject.toml  samconfig.toml  template.yaml
coffeescale/backend/.github/workflows/: deploy.yml
coffeescale/backend/scripts/: deploy.sh  seed-parameter-store.sh  smoke-test.sh
coffeescale/backend/src/dashboard_api/: handler.py  repository.py  service.py
coffeescale/backend/src/erp_dispatcher/: handler.py  requirements.txt
coffeescale/backend/src/erp_dispatcher/adapters/: exponential_backoff.py  http_erp_client.py
coffeescale/backend/src/erp_dispatcher/domain/: entities.py  ports.py  use_cases.py
coffeescale/backend/src/ingestion_handler/: handler.py
coffeescale/backend/src/notification_emitter/: handler.py
coffeescale/backend/src/order_generator/: handler.py
coffeescale/backend/src/order_generator/adapters/: dynamodb_orders.py  sqs_notification.py
coffeescale/backend/src/order_generator/domain/: entities.py  ports.py  use_cases.py
coffeescale/backend/src/security_validator/: handler.py
coffeescale/backend/src/security_validator/adapters/: cloudwatch_audit.py  hmac_verifier.py  sqs_publisher.py
coffeescale/backend/src/security_validator/domain/: entities.py  ports.py  use_cases.py
coffeescale/backend/src/shared/: logging_config.py  metrics.py  parameter_store.py
coffeescale/backend/src/telemetry_processor/: handler.py
coffeescale/backend/src/telemetry_processor/adapters/: dynamodb_inventory.py  (+2 more)
coffeescale/backend/tests/: conftest.py
coffeescale/backend/tests/integration/: test_e2e_flow.py
coffeescale/backend/tests/unit/: test_adapters.py  test_dashboard_api.py  test_ingestion_handler.py  test_notification_emitter.py
(+18 files in other folders)
