[tool.poetry]
name = "coffeescale-backend"
version = "0.1.0"
description = "CoffeeScale IoT inventory replenishment backend — Andina Roasters"
authors = ["Andina Roasters Engineering <engineering@andinaroasters.co>"]
readme = "README.md"
packages = [
    {include = "ingestion_handler", from = "src"},
    {include = "security_validator", from = "src"},
    {include = "telemetry_processor", from = "src"},
    {include = "order_generator", from = "src"},
    {include = "erp_dispatcher", from = "src"},
    {include = "notification_emitter", from = "src"},
    {include = "dashboard_api", from = "src"},
    {include = "shared", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34"
urllib3 = "^2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^5.0"
moto = {extras = ["sqs", "dynamodb", "ssm", "ses", "cloudwatch"], version = "^5.0"}
responses = "^0.25"
pytest-httpserver = "^1.0"
ruff = "^0.4"
bandit = {extras = ["toml"], version = "^1.7"}
import-linter = "^2.0"
pip-audit = "^2.7"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101", "S105", "S106"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S108", "PT011"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80 -v"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
